# din

./: .gitignore  din.db  pyproject.toml
src/din/: __init__.py  main.py
src/din/api/: cli.py
src/din/infra/: db.py  models.py
src/din/interface/: __init__.py  balance.py  cli.py  totals.py  transactions.py
src/din/shared/infra/: clock.py
src/din/transactions/: alchemy.py  mappers.py  model.py  repository.py  use.py
src/din/transactions/api/: formatter.py
src/din/transactions/api/cli/: formatter.py  totals.py  transaction.py
src/din/transactions/app/: dto.py  use.py
src/din/transactions/core/: entity.py  objects.py  repository.py
src/din/transactions/infra/: alchemy.py  mappers.py  model.py  repository.py
src/din/transactions/utils/: formatter.py  mappers.py
